Solve year 2019 day 10 part 1